PfamScripts/adda/src/cadda.pyx

"""
Pyrex extension classes used by `cadda.py`.
"""
import alignlib

cdef extern from "string.h":
    ctypedef int size_t
    void *memcpy(void *dst,void *src,size_t len)
    void *memmove(void *dst,void *src,size_t len)
    void *memset(void *b,int c,size_t len)
    size_t strlen(char *s)
    char *strncpy(char *dest, char *src, size_t n)

cdef extern from "stdlib.h":
    void free(void *)
    void *malloc(size_t)
    void *calloc(size_t,size_t)
    void *realloc(void *,size_t)
    int c_abs "abs" (int)
    void qsort(void *base, size_t nmemb, size_t size,
             int (*compar)(void *,void *))

cdef extern from "stdio.h":
    ctypedef struct FILE:
        pass
    ctypedef struct fpos_t:
        pass
    FILE *fopen(char *,char *)
    int fclose(FILE *)
    int feof(FILE *)
    int sscanf(char *str,char *fmt,...)
    int sprintf(char *str,char *fmt,...)
    int fprintf(FILE *ifile,char *fmt,...)
    int ferror(FILE *stream)
    size_t fwrite( void *ptr, 
                   size_t size, 
                   size_t nmemb,
                   FILE *stream)
    size_t fread(void *ptr, 
                 size_t size, 
                 size_t nmemb, 
                 FILE *stream)
    char *fgets(char *str,int size,FILE *ifile)
    int fgetpos(FILE *stream, fpos_t *pos)
    int fsetpos(FILE *stream, fpos_t *pos)
    int printf(char *format, ...)

cdef extern from "string.h":
    int strcmp(char *s1, char *s2)
    int strncmp(char *s1,char *s2,size_t len)
    char *strcpy(char *dest,char *src)
    char *strdup(char *)
    char *strcat(char *,char *)

#cdef extern from "zlib.h":
#    ctypedef struct z_stream:
#        unsigned char * next_in
#        int avail_in
#        void * next_out
#        int avail_out
#    int deflate(z_stream * strm, int flush)
#    int deflateEnd( z_stream * strm )
#    int deflateInit( z_stream * strm, int level )

cdef extern from "cadda.h":
    int cadda_optimise_initialise()
    int cadda_optimise_destroy()
    double cadda_optimise_iteration()
    int cadda_optimise_save_partitions( char * )
    int cadda_optimise_load_partitions( char * )
    long cadda_optimise_get_num_partitions()
    int cadda_convert( char * )
    long cadda_build_mst( char *, char * )
    int cadda_build_index()
    int cadda_check_index()
    void cadda_dump_parameters()
    void cadda_setFilenameSegments( char *)
    void cadda_setFilenameGraph( char *)
    void cadda_setFilenameIndex( char *)
    void cadda_setFilenameTransfers( char *)
    void cadda_setFilenameNids( char *)
    void cadda_setFilenameDomains( char *)
    void cadda_setFilenameDomainGraph( char *)
    void cadda_setFilenameMst( char *)
    void cadda_setLogLevel(int)
    void cadda_setResolution( int )
    void cadda_setReportStep( int )
    void cadda_setK(double)
    void cadda_setC(double)
    void cadda_setMax(double)
    void cadda_setMin(double)
    void cadda_setE(double)
    void cadda_setF(double)
    void cadda_setRelativeOverhang( int )
    void cadda_setOnlyQuery( int )
    void cadda_setDescend( int )
    void cadda_setDisallowShortening( int )
    void cadda_setMaxIterations( int )
    void cadda_setEvalueThresholdTrustedLinks( double) 
    int toCompressedFile( unsigned char *, size_t, FILE * )
    int fromCompressedFile( unsigned char *, size_t, FILE * )
    
def optimise_iteration():
    return cadda_optimise_iteration()

def optimise_initialise():
    return cadda_optimise_initialise()

def optimise_destroy():
    return cadda_optimise_destroy()

def optimise_get_num_partitions():
    return cadda_optimise_get_num_partitions()

def optimise_load_partitions( filename ):
    return cadda_optimise_load_partitions( filename )

def optimise_save_partitions( filename ):
    return cadda_optimise_save_partitions( filename )

def convert( filename):
    return cadda_convert( filename )

def build_mst( out_filename, in_filename ):
    return cadda_build_mst( out_filename, in_filename )

def build_index():
    return cadda_build_index()

def check_index():
    return cadda_check_index()

def dump_parameters():
    cadda_dump_parameters()

def setFilenameSegments(v):
    """set input filename with segments."""
    cadda_setFilenameSegments(v)

def setFilenameGraph(v):
    """set input filename with graph."""
    cadda_setFilenameGraph(v)

def setFilenameIndex(v):
    """set input filename with index."""
    cadda_setFilenameIndex(v)

def setFilenameMst(v):
    """set filename with mst."""
    cadda_setFilenameMst(v)

def setFilenameNids(v):
    """set input filename with nids."""
    cadda_setFilenameNids(v)

def setFilenameDomains(v):
    """set input filename with domains."""
    cadda_setFilenameDomains(v)

def setFilenameDomainGraph(v):
    """set filename of domain graph."""
    cadda_setFilenameDomainGraph(v)

def setFilenameTransfers(v):
    """set input filename with transfer data."""
    cadda_setFilenameTransfers(v)

def setLogLevel(v):
    """set the logging level."""
    cadda_setLogLevel(v)

def setSigmoidK(v):
    """set parameter K: smoothness of sigmoid."""
    cadda_setK(v)

def setSigmoidC(v):
    """set parameter C: inflection point of sigmoid."""
    cadda_setC(v)

def setSigmoidMax(v):
    """set parameter M: maximum sigmoid."""
    cadda_setMax(v)

def setSigmoidMin(v):
    """set parameter N: minimum sigmoid."""
    cadda_setMin(v)

def setExponentialE(v):
    """set parameter E: exponential decay rate."""
    cadda_setE(v)

def setExponentialF(v):
    """set parameter F: exponential decay scale."""
    cadda_setF(v)

def setRelativeOverhang(v):  
    """if true, use relative overhang."""
    cadda_setRelativeOverhang( v )

def setOnlyQuery(v):  
    """if true, use only the score based on the query."""
    cadda_setOnlyQuery( v )

def setResolution(v):  
    """resolution to use."""
    cadda_setResolution( v )

def setDescend(v):  
    """if true, descend."""
    cadda_setDescend( v )

def setDisallowShortening(v):  
    """if true, disallow shortening."""
    cadda_setDisallowShortening( v )

def setMaxIterations(v):  
    """set the maximum number of iterations."""
    cadda_setMaxIterations( v )

def setReportStep(v):
    """set reporting interval."""
    cadda_setReportStep(v)
    
def setEvalueThresholdTrustedLinks( v ):
    """set evalue threshold for trusted links.""" 
    cadda_setEvalueThresholdTrustedLinks( v )
    
import alignlib

# 100Mb
DEF MAX_BUFFER_SIZE = 100000000

cdef extern from "adda.h":

    ctypedef int Nid
    ctypedef int Residue
    ctypedef fpos_t FileIndex
    ctypedef int Length
    ctypedef int uResidue

## todo: convert to a class
ctypedef struct Neighbour:
    Nid sbjct_nid
    float evalue
    uResidue query_start
    uResidue query_end
    uResidue sbjct_start
    uResidue sbjct_end
    Length query_alen
    Length sbjct_alen
    char * query_ali
    char * sbjct_ali

cdef void init_neighbour( Neighbour * n):
    n.query_ali = NULL
    n.sbjct_ali = NULL

cdef destroy_neighbour( Neighbour * n):
    if n.query_ali != NULL: free( n.query_ali)
    if n.sbjct_ali != NULL: free( n.sbjct_ali)

cdef class PairsDBNeighbourRecord
cdef fromPairsDBNeighbour( Neighbour * dest, 
                           Nid sbjct_nid,
                           PairsDBNeighbourRecord src ):
    '''load data from neighbour.'''
    if dest.query_ali != NULL: free( dest.query_ali)
    if dest.sbjct_ali != NULL: free( dest.sbjct_ali)
    dest.sbjct_nid = sbjct_nid
    dest.query_start = src.query_start
    dest.query_end = src.query_end
    dest.sbjct_start = src.sbjct_start
    dest.sbjct_end = src.sbjct_end
    dest.evalue = src.evalue
    dest.query_alen = strlen( src.query_ali )
    dest.sbjct_alen = strlen( src.sbjct_ali )
    # copy string explicitely, as lifetime of python object neighbours
    # is no guaranteed.
    dest.query_ali = <char*>calloc( dest.query_alen + 1, sizeof(char) )
    dest.sbjct_ali = <char*>calloc( dest.sbjct_alen + 1, sizeof(char) )

    strncpy( dest.query_ali, src.query_ali, dest.query_alen + 1)
    strncpy( dest.sbjct_ali, src.sbjct_ali, dest.sbjct_alen + 1)

class NeighbourRecord(object):

    def __str__( self ):

        return "\t".join( map(str, (
            self.mQueryToken, self.mSbjctToken, self.mEvalue,
            self.mQueryFrom, self.mQueryTo,
            self.mSbjctFrom, self.mSbjctTo )))

    def getAlignment(self ):
        """parse alignment into a AlignmentVector object."""
        r = alignlib.makeAlignmentVector()
        f = alignlib.AlignmentFormatEmissions()
        f.mRowFrom, f.mRowTo, f.mRowAlignment = self.mQueryFrom, self.mQueryTo, self.mQueryAli
        f.mColFrom, f.mColTo, f.mColAlignment = self.mSbjctFrom, self.mSbjctTo, self.mSbjctAli     
        f.copy( r )
        return r   

cdef toNeighbour( Nid query_nid, Neighbour * n ):
    '''load data from neighbour.'''

    dest = NeighbourRecord()

    dest.mQueryToken = query_nid
    dest.mSbjctToken = n.sbjct_nid
    dest.mEvalue = n.evalue
    dest.mQueryFrom = n.query_start
    dest.mQueryTo = n.query_end
    dest.mQueryAli = n.query_ali
    dest.mSbjctFrom = n.sbjct_start
    dest.mSbjctTo = n.sbjct_end
    dest.mSbjctAli = n.sbjct_ali
    
    return dest

cdef toFile( Neighbour * n, FILE * output_f ):
    '''write neighbour to file'''
    fwrite( &n.sbjct_nid, sizeof(Nid), 1, output_f )
    fwrite( &n.evalue, sizeof(float), 1, output_f )
    fwrite( &n.query_start, sizeof(uResidue), 1, output_f )
    fwrite( &n.query_end, sizeof(uResidue), 1, output_f )
    fwrite( &n.sbjct_start, sizeof(uResidue), 1, output_f )
    fwrite( &n.sbjct_end, sizeof(uResidue), 1, output_f )
    fwrite( &n.query_alen, sizeof(Length), 1, output_f )
    fwrite( &n.sbjct_alen, sizeof(Length), 1, output_f )
    fwrite( n.query_ali, sizeof( char ), n.query_alen, output_f )
    fwrite( n.sbjct_ali, sizeof( char ), n.sbjct_alen, output_f )

cdef fromFile( Neighbour * n, FILE * input_f ):
    '''read neighbour from file'''
    if n.query_ali != NULL: free( n.query_ali)
    if n.sbjct_ali != NULL: free( n.sbjct_ali)
    fread( &n.sbjct_nid, sizeof(Nid), 1, input_f )
    fread( &n.evalue, sizeof(float), 1, input_f )
    fread( &n.query_start, sizeof(uResidue), 1, input_f )
    fread( &n.query_end, sizeof(uResidue), 1, input_f )
    fread( &n.sbjct_start, sizeof(uResidue), 1, input_f )
    fread( &n.sbjct_end, sizeof(uResidue), 1, input_f )
    fread( &n.query_alen, sizeof(Length), 1, input_f )
    fread( &n.sbjct_alen, sizeof(Length), 1, input_f )
    n.query_ali = <char*>calloc( n.query_alen + 1, sizeof(char) )
    n.sbjct_ali = <char*>calloc( n.sbjct_alen + 1, sizeof(char) )
    fread( n.query_ali, sizeof( char ), n.query_alen, input_f )
    fread( n.sbjct_ali, sizeof( char ), n.sbjct_alen, input_f )

cdef toStdout( Nid query_nid, Neighbour * n ):
    '''print neighbour to stdout in pairsdb format'''
    printf("%i\t%i\t%f\t%i\t%i\t%s\t%i\t%i\t%s\n",
           query_nid,
           n.sbjct_nid,
           n.evalue,
           n.query_start,
           n.query_end,
           n.query_ali,
           n.sbjct_start,
           n.sbjct_end,
           n.sbjct_ali)

cdef unsigned char * toBuffer( Neighbour * n, unsigned char * buffer):
    '''copy information in *n* into buffer.

    returns pointer to position in buffer after writing all data
    '''
    cdef size_t s
    s = sizeof( Neighbour ) - 2 * sizeof( char * )
    memcpy( buffer, n, s )
    buffer += s

    s = sizeof( char ) * (n.query_alen + 1)
    memcpy( buffer, n.query_ali, s )
    buffer += s

    s = sizeof( char ) * (n.sbjct_alen + 1)
    memcpy( buffer, n.sbjct_ali, s )
    buffer += s

    return buffer

cdef unsigned char * fromBuffer( Neighbour * n, unsigned char * buffer):
    '''copy data from buffer into *n*.

    returns pointer to position in buffer after reading one entry
    '''
    if n.query_ali != NULL: free( n.query_ali)
    if n.sbjct_ali != NULL: free( n.sbjct_ali)

    cdef size_t s
    s = sizeof( Neighbour ) - 2 * sizeof( char * )
    memcpy( n, buffer, s )
    buffer += s
